use Math.clamp()